# simple-stt

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  OVERHAUL_REPORT.md  OVERLAY_NOTIFICATIONS.md  README.md  START_HERE.txt  THIRD_PARTY_NOTICES.md  build-distribution.cmd  build.rs  handoff.md  tooltip.ahk
.agents/skills/add-setting/: SKILL.md
.agents/skills/debug-live-pipeline/: SKILL.md
.agents/skills/run-smoke-test/: SKILL.md
.codex/skills/rust-code-quality/: SKILL.md
ahk/: simple-stt.ahk  uvox.ahk
ahk/lib/: Config.ahk  Hotkeys.ahk  IpcClient.ahk  Logging.ahk  ProcessSupervisor.ahk  SettingsGui.ahk  TabProtocol.ahk  TextTransform.ahk  Tray.ahk  Typist.ahk  Utils.ahk
ahk/tests/: full-smoke.ahk  hotkeys-manual.ahk  ipc-smoke.ahk  ipcclient-missing-response-smoke.ahk  settings-preview.ahk  settings-smoke.ahk  tabprotocol-retry-smoke.ahk  text-transform-smoke.ahk  typing-smoke.ahk
artifacts/: validation-report.md
artifacts/manifest/: ahk64.manifest  uvox.manifest
docs/: ARCHITECTURE.md  DEBUGGING.md  PROTOCOL.md  RESEARCH.md  ahk-v2-research.md  change-manifest.md  configuration.md  current-behavior-inventory.md  ipc-decision.md  memory-cleanup-validation.md  packaging.md  performance-pass.md  testing.md
icons/: README.md
resources/: simple-stt.exe.manifest  simple-stt.iss  uvox.exe.manifest  windows.rc
rust/: Cargo.toml  build.rs
rust/resources/: windows.rc
rust/src/: app.rs  audio.rs  config.rs  gui.rs  hotkey.rs  input.rs  lib.rs  live_captions_native.rs  logging.rs  main.rs  models.rs  overlay.rs  parakeet_native.rs  protocol.rs  resample.rs  screenshots.rs  transcript.rs  tray.rs  winutil.rs  worker.rs
rust/ui/: settings.slint
scripts/: apply_perf_patch.py  apply_remaining_patch.py  bench-simple-stt-ctl.ps1  bootstrap-dev.cmd  bootstrap-dev.ps1  build-distribution.ps1  build-release.ps1  check-prereqs.ps1  doctor.ps1  first-test.cmd  first-test.ps1  fix_models_cache.py  ipc-poc.ps1  listen-console.ps1  live-captions-stt.cmd  live-captions-stt.ps1  memory-cleanup-validation.ps1  package-release.ps1  patch_refresh_models.py  patch_settings_gui.py  python-unit-tests.ps1  record-test.ps1  run-dev.cmd  run-dev.ps1  run-live-captions-native.ps1  run-live-captions.cmd  run-live-captions.ps1  run-parakeet-record.ps1  run-settings-preview.cmd  run-settings-preview.py  run.ps1  rust-quality.sh  settings.cmd  settings.ps1  setup-worker.ps1  test-ahk-full.cmd  test-all.ps1  test-audio.ps1  test-full.cmd  test-inference-devices.py  (+3 more)
src/: audio.rs  config.rs  gui.rs  lib.rs  logging.rs  main.rs  models.rs  overlay.rs  reload_event.rs  startup.rs  transcript.rs  tray.rs
src/capture/: audio.rs  inference_supervisor.rs  ipc_server.rs  mod.rs  overlay.rs  overlay_windows.rs  process.rs  state.rs
src/common/: line_codec.rs  mod.rs  shell_protocol.rs
src/infer/: mod.rs  parakeet_native.rs  protocol.rs
tests/: idle_unload_integration.rs  worker_lifecycle.rs
tools/ipc-poc/: README.md  mock_service.py  test_poc.py
ui/: settings.slint
worker/: README.md  pyproject.toml
worker/src/uvox_worker/: __init__.py  audio.py  cli.py  constants.py  cuda.py  engine.py  errors.py  nemotron.py  parakeet.py  protocol.py  sample.py  server.py  stabilizer.py
worker/tests/: test_audio.py  test_cuda.py  test_engine.py  test_protocol.py  test_sample.py  test_server_echo.py  test_stabilizer.py
