[package]
name = "uvox"
version = "0.2.0"
edition = "2021"
license = "GPL-2.0-only"
description = "Thin AutoHotkey shell with persistent capture and disposable Parakeet inference worker"
autobins = false

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
dirs = "6"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
cpal = "0.17"
libloading = "0.8"
windows-sys = { version = "0.60", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Security",
  "Win32_System_LibraryLoader",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
  "Win32_Storage_FileSystem",
  "Win32_UI_Controls",
  "Win32_UI_WindowsAndMessaging",
] }

[[bin]]
name = "uvox-capture"
path = "src/bin/uvox_capture.rs"

[[bin]]
name = "uvox-infer"
path = "src/bin/uvox_infer.rs"

[[bin]]
name = "uvoxctl"
path = "src/bin/uvoxctl.rs"

[[bin]]
name = "uvox_mock_infer"
path = "src/bin/uvox_mock_infer.rs"
