[package]
name = "uvox"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"
description = "Native Windows hold-to-record dictation with CUDA Parakeet"
build = "build.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
ctrlc = "3"
dirs = "6"
image = { version = "0.25", default-features = false, features = ["png"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
raw-window-handle = "0.6"
slint = { version = "1.16", features = ["raw-window-handle-06"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[build-dependencies]
slint-build = "1.16"

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
cpal = "0.17"
libloading = "0.8"
windows-sys = { version = "0.60", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_System_Registry",
  "Win32_UI_Controls",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }
