[project]
name = "uvox-worker"
version = "0.1.0"
description = "CUDA-only NVIDIA Nemotron streaming ASR worker for Uvox"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "Cython>=3.0",
  "packaging>=24",
  "numpy>=1.26,<3",
  "omegaconf>=2.3",
  "soundfile>=0.12",
  "torch>=2.7",
  "torchaudio>=2.7",
  "nemo_toolkit[asr] @ git+https://github.com/NVIDIA-NeMo/NeMo.git@main",
]

[project.scripts]
uvox-worker = "uvox_worker.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3",
  "ruff>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uvox_worker"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
